--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
 								<h3 class="item-info">4 En Linea</h3>
 								<p class="item-info">Rol</p>
 							</div>
-							<a href="juego.html"><img src="./assets/img/rol/1.png" alt=""></a>
+							<a href="juego.html"><img src="./assets/img/como-jugar1.png" alt=""></a>
 						</div>
 						<div class="game large rol">
 							<div class="info-game">
